--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -8,13 +8,13 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="#">Home</a></li>
-        <li><a ng-href="#">About</a></li>
-        <li><a ng-href="#">Contact</a></li>
+        <li ui-sref-active="active"><a href="#" ui-sref="core.connect">Home</a></li>
+        <li ui-sref-active="active"><a href="#" ui-sref="apis.list">Apis</a></li>
+        <li ui-sref-active="help"><a href="#" ui-sref="apis.list">Help</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
-        <li>Application was created {{ vm.relativeDate }}.</li>
+        <li><a href="#">Disconnect</a></li>
       </ul>
     </div>
   </div>
