--- a/src/app/pages/apis/apis.list.html
+++ b/src/app/pages/apis/apis.list.html
@@ -33,7 +33,7 @@
         </td>
       </tr>
 
-      <tr ng-show="!apis.length">
+      <tr ng-show="!apis.apis.length">
         <td colspan="9">
           No APIs
         </td>
