--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
-  <div class="container">
+  <div class="container-fluid">
     <a href="https://mashape.com">
         <img src="/assets/images/branding-footer.svg" alt="Mashape" width="22" height="26">
         Kong and Kong Logo are © of <strong>Mashape Inc</strong>
