--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-static-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="https://github.com/Swiip/generator-gulp-angular">
+      <a class="navbar-brand" href="/">
         <img src="/assets/images/branding.svg" alt="" />
       </a>
     </div>
@@ -11,10 +11,11 @@
         <li ui-sref-active="active"><a href="#" ui-sref="core.connect">Home</a></li>
         <li ui-sref-active="active"><a href="#" ui-sref="apis.list">Apis</a></li>
         <li ui-sref-active="help"><a href="#" ui-sref="apis.list">Help</a></li>
+        <li><a href="https://getkong.org" >Kong</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
-        <li><a href="#">Disconnect</a></li>
+        <li><a href="#" ng-click="vm.disconnect()">Disconnect</a></li>
       </ul>
     </div>
   </div>
